paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/tags_1/sample_005/target.compile.log
error[E0369]: binary operation `==` cannot be applied to type `Option<&Tnode<'_>>`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/tags_1/sample_005/target.rs:33:16
   |
33 |     if sp.left == sp.right {
   |        ------- ^^ -------- Option<&Tnode<'_>>
   |        |
   |        Option<&Tnode<'_>>
   |
note: an implementation of `PartialEq` might be missing for `Tnode<'_>`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/tags_1/sample_005/target.rs:1:1
   |
 1 | struct Tnode<'a> {
   | ^^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `Tnode<'_>` with `#[derive(PartialEq)]`
   |
 1 + #[derive(PartialEq)]
 2 | struct Tnode<'a> {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.